<resources>
    <string name="app_name">Weisper</string>
    <string name="action_switch_status">全部</string>
    <string name="action_switch_picture">图片</string>
    <string name="redirect_uri">http://oauth.weico.cc</string>
    <string name="key_hash">1e6e33db08f9192306c4afa0a61ad56c</string>
    <string name="package_name">com.eico.weico</string>
    <string name="scope">email,direct_messages_read,direct_messages_write,friendships_groups_read,friendships_groups_write,statuses_to_me_read,follow_app_official_microblog,invitation_write</string>
    <string name="client_id">211160679</string>
    <string name="login_success">登录有效期 %d 天</string>
    <string name="login_failed">登录失败</string>
    <string name="oauth_url" formatted="false"><![CDATA[https://api.weibo.com/oauth2/authorize?client_id=%s&response_type=token&redirect_uri=%s&key_hash=%s&packagename=%s&display=mobile&scope=%s]]></string>
    <string name="action_change_theme">主题</string>
    <string name="action_status_repost">转发</string>
    <string name="action_status_comment">评论</string>
    <string name="action_status_like">收藏</string>
    <string name="action_status_share">分享</string>
    <string name="action_status_detail">查看</string>
    <string name="send">发送</string>
    <string name="snackbar_updated">更新了 %d 条</string>
    <string name="snackbar_show">查看</string>
</resources>
